tab for product and star rating and minimal css

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 
 body {
   background: none;
+  color: #000;
   font-size: 20px;
   text-align: center;
-  font-family: 'futura', Arial, sans-serif;
+  font-family: 'futura', Helvetica, sans-serif;
 }
 
