--- a/src/Product.css
+++ b/src/Product.css
@@ -7,10 +7,11 @@
   background: none;
   /* color: #000; */
   font-size: 12px;
+  color: #000;
   /* border: grey solid 2px; */
   /* padding: 1rem; */
   width: 200px;
-  /* height: 300px; */
+  height: 350px;
   /* display: inline-grid; */
   margin: .5rem .5rem;
   /* margin:0 auto; */
@@ -24,6 +25,23 @@
 
 div.ppc-product-info {
     font-size: 14px; 
+    padding: 30px;
+    height: 550px;
+}
+
+div.ppc-image {
+    /* float: left; */
+    justify-content: left;
+    overflow:hidden;
+    /* padding: 30px; */
+}
+
+div.ppc-info {
+    /* float: right; */
+    justify-content: right;
+    text-align: left;
+    padding: 20px;
+    overflow:hidden;
 }
 
 /* brand css */
@@ -45,3 +63,38 @@ a.brand-index-links {
     font-weight: 400;
     width: 15px;
 } */
+
+
+button {
+    background: none;
+    border: 1px solid #fa2acd;
+    border-radius: 30px;
+    color: #000;
+    display: block;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 1em auto;
+    /* position: absolute; */
+    /* position: fixed;
+    bottom: 0; */
+    
+  }
+  
+  button:hover {
+    color: #000;
+    background: none;
+  }
+  
+  /* button::before,
+  button::after {
+    background: #fff;
+    content: '';
+    position: absolute;
+    z-index: -1;
+  } */
+  
+  .button-circle:hover {
+    color: #fa2acd;
+    background: #fff;
+  }
+  
