--- a/src/Product.css
+++ b/src/Product.css
@@ -1,4 +1,5 @@
 .product-card {
+  transform: scale();
   /* display: flex; */
   text-align: center;
   display: block;
@@ -10,8 +11,8 @@
   color: #000;
   /* border: grey solid 2px; */
   /* padding: 1rem; */
-  width: 200px;
-  height: 350px;
+  width: 15rem;
+  height: 20rem;
   /* display: inline-grid; */
   margin: .5rem .5rem;
   /* margin:0 auto; */
