--- a/src/Product.css
+++ b/src/Product.css
@@ -11,8 +11,8 @@
   color: #000;
   /* border: grey solid 2px; */
   /* padding: 1rem; */
-  width: 15rem;
-  height: 20rem;
+  width: 15%;
+  height: 20%;
   /* display: inline-grid; */
   margin: .5rem .5rem;
   /* margin:0 auto; */
@@ -22,6 +22,10 @@
   padding: 5px;
   /* border-style: ridge; */
   /* border-color: #fff;  */
+}
+
+.product-card-pic {
+  width: 100%
 }
 
 div.ppc-product-info {
