--- a/src/Review.css
+++ b/src/Review.css
@@ -1,11 +1,22 @@
 body {
-  font-size: 12px;
+  font-size: 16px;
 }
 
   div.reviewer {
     display: flex;
-    justify-content: left;
-    overflow:hidden;
+    justify-content: center;
+    background: #ffccff;
+    width: 100vh;
+    /* overflow:hidden; */
+
+  }
+
+  div.review-form {
+    display: flex;
+    justify-content: center;
+    background: #99ccff;
+    /* width: 100vh; */
+    /* overflow:hidden; */
 
   }
 
@@ -13,4 +24,40 @@ body {
     display: flex;
     justify-content: right;
     overflow:hidden;
+  }
+
+  textarea.write-review {
+    width: 80vh;
+    height: 10vh;
+    text-align: top;
+    font-size: 16px;
+    color: #fa2acd;
+    resize:none;
+  }
+  
+  label {
+    display: flex;
+    align: center;
+    /* margin-bottom: 0rem */
+  }
+
+  button:hover {
+    background: #fa2acd;
+    color: #fff;
+  }
+
+  button.review-update {
+    font-size: 10px;
+    width: 7vh;
+  
+  }
+
+  textarea.review-update {
+    width: 100vh;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    color: #fa2acd;
+    resize:none;
   }
