--- a/src/User.css
+++ b/src/User.css
@@ -39,13 +39,72 @@ body {
   color: #fa2acd;
 }
 
+
+/* overall */
+
+
 input {
   width: 40vh;
   font-size: 16px;
   color: #fa2acd;
 }
 
+input:focus {
+  outline: 2px solid #fa2acd86;
+  background-color: none;
+}
+
 label {
   display: flex;
   margin-bottom: 0rem
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+color: #fa2acd65;
+  ;
+  opacity: 1; /* Firefox */
+}
+
+
+
+
+
+
+/* sign in */
+
+.before-signup{
+  margin-top: 8vh;
+}
+
+.signup {
+  transform: scale();
+  text-align: center;
+  display: inline-block;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  background: none;
+  font-size: 14px;
+  color: #000;
+  border: grey solid 2px;
+  padding: 3% 3% 5% 3%;
+  width: 50vh;
+  height: 55vh; 
+}
+
+.signup-link {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 16px;
+}
+
+
+.signup-link a {
+  color: #000;
+  text-align: center;
+}
+
+.signup-link a:hover {
+  color: #fa2acd;
 }
