--- a/src/KBeautySteps.css
+++ b/src/KBeautySteps.css
@@ -24,7 +24,7 @@ font-size: 18px;
 
 .step-details-box {
 width: 30%;
-  border: 1px solid rgb(150, 34, 34);
+  border: 1px solid #fa2acd57;
 }
 
 .step-info {
